tests/snapshots/change_operations_test__2cw_change_word_twice.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:4
Lines: 1

Buffer:
firs[t]three four
