tests/snapshots/change_operations_test__C_basic.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:12
Lines: 1

Buffer:
hellounivers[e]
