tests/snapshots/change_operations_test__C_empty_line.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:7
Lines: 3

Buffer:
hello
inserte[d]
world
