tests/snapshots/change_operations_test__C_from_beginning.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:10
Lines: 1

Buffer:
new conten[t]
