tests/snapshots/change_operations_test__c2w_change_two_words.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:8
Lines: 1

Buffer:
one two [t]hree four
