tests/snapshots/change_operations_test__c3l_change_3_chars.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:2
Lines: 1

Buffer:
he[l]o world
