tests/snapshots/change_operations_test__cG_change_to_end_of_file.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 3:11
Lines: 4

Buffer:
line 1
line 2
line 3
lint of fil[e] 4
