tests/snapshots/change_operations_test__c_zero.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:4
Lines: 1

Buffer:
tart[ ]ello world
