tests/snapshots/change_operations_test__c_zero_at_beginning.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[e]llo world
