tests/snapshots/change_operations_test__ca_double_quote.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:11
Lines: 1

Buffer:
hello verse[']"world" test
